css/style.css
/*================================
SCREAM WEB STUDIOS CSS FRAMEWORK
================================*/
html, body, div, span, a, 
img, h1, h2, h3, h4, h5, h6, p,
ol, ul, li, form, label {
	background: transparent;
	border: 0;
	font-family: 'Times New Roman', serif;
	font-weight: inherit;
	font-size: inherit;
	outline: 0;
}

p, li { 
    color: #454545; 
    line-height: 25px;
}

:focus	{ outline: 0; }

pre {
    overflow-x: auto;
    font-family: "Menlo", Courier, monospace;
    padding: 5%;
    display: block;
    margin-bottom: 25px;
    font-size: 15px;
    color: whiteSmoke;
    background: #444;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    -moz-background-clip: padding;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    width: 90%;
    margin: inherit;
}

code {
    background: #eee;
    font-family: "Menlo", Courier, monospace; 
    font-size: 14px;
}

blockquote {
    background:#f9f9f9;
    border-left:10px solid #ccc;
    margin:1.5em 10px;
    padding:.5em 10px;
    quotes:"\201C""\201D""\2018""\2019";
}

blockquote:before {
    color:#ccc;
    content:open-quote;
    font-size:4em;
    line-height:.1em;
    margin-right:.25em;
    vertical-align:-.4em;
}

blockquote p {
    display:inline;
}

/* HEADINGS _____________________________________*/
h1, h2, h3, h4, h5, h6 { font-family: 'Asap', sans-serif; line-height: 40px; }
h1 { font-size: 36px; }
h2 { font-size: 28px; }
h3 { font-size: 24px; }
h4 { font-size: 20px; }
h5 { font-size: 16px; }
h6 { font-size: 14px; }

/* LINKS _____________________________________*/
a	    { text-decoration: none;  }
a:link 	    { color: #4a768f; }
a:visited   { color: #4a768f; }
a:hover     { color: #0095da; }
a:active    { color: #000; }


/* General Styles
___________________________________________________________*/
#wrapper {
    position: relative;
}

.current-cat a { color: #0095da; font-weight: bold;  }


/* Header
___________________________________________________________*/
.js header #searchform {
    display: none;
    position: absolute;
    right: 0px;
    top: 95px;
}

    #site-title { overflow: hidden;  }
    #site-title span {
	float: left;
	font-size: 14px;
	width: 100%;
    }
	#site-title a { font-family: 'Asap', sans-serif; }

    header ul li { color: #4a768f; list-style-type: none; }


/* Content
___________________________________________________________*/
article { padding: 0 0 30px 0;  }
    article h1 a { font-family: 'Asap', sans-serif; }
    article img {
	height: auto;
	max-width: 520px;
	width: auto; 
    }
    article img.alignright, .wp-caption.alignright { float: right; margin: 10px 0 10px 20px ; }
    article img.alignleft, .wp-caption.alignleft { float: left; margin: 10px 20px 10px 0; }
    article img.wp-post-image { float: left; margin: 10px 30px 10px 0; }

    article .wp-caption {
	background: #eee;
	max-width: 520px !important;
	padding-top: 5px;
	text-align: center;
    }
    article .wp-caption img { max-width: 500px !important;  }
    article .wp-caption-text { margin: -5px 0 0 0; }

    article.notfound img { margin: 0 30px 30px 0; }
    article.notfound h1 { font-size: 40px;  }

.archives.home { margin: 30px 0 0 0; }
    .archives ul { 
	list-style-type: none; 
	padding: 0;
    }
    .archives ul li { 
	border-bottom: 1px dotted #ccc;
	padding: 8px 0;
    }
    .archives ul li em { 
	font-size: 12px; 
	padding: 0 30px 0 0;
	text-transform: uppercase;  
    }
    .archives.home ul li:last-child a { font-size: 12px;  }

.singlepost-ad { 
    border-top: 1px dashed #ccc;
    float: left; 
    padding: 30px 0 0 0;
}

    .singlepost-ad h5 { margin: 0 0 10px 0;  }
    .singlepost-ad img {
	float: left;
	margin: 0 20px 0 0;
    }


/* Sidebar
___________________________________________________________*/
#sidebar { 
    padding: 40px 0 0 0; 
    overflow: hidden; 
}

    #sidebar .sidebar-box {
	border-bottom: 1px dashed #e1e1e1;
	float: right;
	margin: 0 0 30px 0;
	width: 130px;
    }
	#sidebar .sidebar-box ul {
	    list-style-type: none;
	    padding: 0 0 0 10px;
	}
	#sidebar .sidebar-box h5 { line-height: normal !important; margin: 0; }
	#sidebar #rotating-adds p { color: #999; font-size: 14px; margin-top: 5px; }
	#sidebar #social ul { list-style-type: none; padding: 0 0 0 20px; }


/* Footer
___________________________________________________________*/
footer {
    padding: 40px 0;
}

    footer .copy { float: left; width: 70%; }
    footer .copy a { font-size: 15px; }
    footer .links { float: right; }


/* Comments
___________________________________________________________*/
#comments {
    border-top: 1px dashed #ccc;
    display: inline-block;
    margin: 30px 0 0 0;
}

#respond label {
    float: left;
    margin: 0 30px 0 0;
    text-align: right;
    width: 60px;
}

#respond input, #respond textarea {
    background: #eee;
    border: none;
    padding: 5px;
}
#respond input:focus, #respond textarea:focus { background: #F4F6FB; }
#respond textarea { width: 80%;  }

#respond #submit { 
    background: #4A768F; 
    color: #fff; 
    cursor: pointer; 
}
#respond #submit:hover { background: #454545; color: #fff; }

.commentlist {
    list-style-type: none;
    padding: 0;
}
.comment {
    background: #f9f9f9;
    margin: 10px 0;
    padding: 20px;
}
.comment.byuser { background: #f2fcff !important; }
.comment.even { background: none; }
.comment.depth-3 { background: #f9f9f9;  }
.vcard img {
    float: left;
    margin: 0 20px 20px 0;
}


/* Portfolio
___________________________________________________________*/
#projects { margin: 10px 0 0 0;  }
#projects .project-box { 
    float: left;
    margin-bottom: 10px;
    width: 150px !important; 
}
#projects .project-box a { float: left; }
#project-meta a { margin-right: 40px; }

.project-type { list-style-type: none; margin-left: 10px;  overflow: hidden; padding: 0; }
.project-type li { float: left; margin: 0 20px 0 0;  }

